# bedtime-dnd

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  EMAIL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  fly.toml.example  justfile  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
app/: config.py  deps.py  email.py  helpers.py
app/routes/: auth.py  campaigns.py  friends.py  game.py  players.py  settings.py
hooks/: install.sh  pre-push
scripts/: generate_sprites.py  pre-commit  release.sh
static/: theme.css
supabase/: config.toml
supabase/migrations/: 20260529000000_initial_schema.sql  20260607000000_reorder_party_rpc.sql
templates/: base.html  campaign_detail.html  campaign_history.html  campaigns.html  error.html  friends.html  game.html  guide.html  login.html  player_detail.html  player_new.html  players.html  reset_password.html  settings.html
tests/: test_app.py
