[project]
name = "dnd"
version = "1.0.2"
description = "A mobile-optimized AI Dungeon Master for bedtime RPG sessions with kids"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "supabase>=2.31.0",
    "truststore>=0.10.4",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "rembg[cpu]>=2.0.76",
    "ruff>=0.15.15",
    "ty>=0.0.44",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
